--- a/com.ucsandroid.profitable/WebContent/WEB-INF/web.xml
+++ b/com.ucsandroid.profitable/WebContent/WEB-INF/web.xml
@@ -14,6 +14,12 @@
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>com.ucsandroid.profitable</param-value>
         </init-param>
+         <!-- 
+        <init-param>
+		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+		<param-value>true</param-value>
+		</init-param>
+         -->
         <load-on-startup>1</load-on-startup>
     </servlet>
     
