--- a/com.ucsandroid.profitable/pom.xml
+++ b/com.ucsandroid.profitable/pom.xml
@@ -48,6 +48,14 @@
 			<version>9.0-801.jdbc4</version>
 		</dependency>
 		
+         <!--  Gson: Java to Json conversion -->
+         <dependency>
+             <groupId>com.google.code.gson</groupId>
+             <artifactId>gson</artifactId>
+             <version>2.6.2</version>
+             <scope>compile</scope>
+         </dependency>
+		
 		<dependency>
 	<groupId>javax.ws.rs</groupId>
 	<artifactId>javax.ws.rs-api</artifactId>
