--- a/com.ucsandroid.profitable/pom.xml
+++ b/com.ucsandroid.profitable/pom.xml
@@ -6,8 +6,8 @@
 	<artifactId>com.ucsandroid.profitable</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
-	
+
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -30,14 +30,9 @@
 		</plugins>
 	</build>
 	<dependencies>
-	
-	<!-- 
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-servlet</artifactId>
-			<version>1.19.1</version>
-		</dependency>
-		 -->
+
+		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-servlet</artifactId> 
+			<version>1.19.1</version> </dependency> -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -49,21 +44,28 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.0-801.jdbc4</version>
 		</dependency>
-		
-		 <!--  Gson: Java to Json conversion -->
-         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.6.2</version>
-            <scope>compile</scope>
-         </dependency>
-		
-		<dependency>
-	        <groupId>javax.ws.rs</groupId>
-	        <artifactId>javax.ws.rs-api</artifactId>
-	        <version>2.0</version>
-        </dependency>
-		
 
+		<!-- Gson: Java to Json conversion -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.google.gcm</groupId>
+			<artifactId>gcm-server</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 </project>
