--- a/com.ucsandroid.profitable/pom.xml
+++ b/com.ucsandroid.profitable/pom.xml
@@ -65,7 +65,13 @@
 			<artifactId>gcm-server</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		
-		
+
+
+
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-server-sdk</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
